tests/fixtures/pass/block_mutation.sc
let main(): i32 = {
  let mut value = 40
  value = value + 2
  value
}
