tests/fixtures/fail/compound_assign_immutable.sc
let main(): i32 = {
  let value = 40
  value += 2
  value
}
